<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_name_example">e.g. Raymond Chan</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="next_question">Go To Next Question</string>
    <string name="finish">Finish</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="result">Result</string>
    <string name="congratulations">Hey, Congratulations!</string>
    <string name="score">Your score is %d out of %d</string>
</resources>